# MethodSeidelOMP

./: CMakeLists.txt  FileTransfer.cpp  FileTransfer.h  MethodSeidel.cpp  MethodSeidel.h  input2_00.txt  input2_06.txt  main.cpp
